--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "random-seed": "^0.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.0.1",
+    "@types/uuid": "^8.3.0",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
@@ -32,6 +36,8 @@
     "eslint-plugin-vue": "^7.7.0",
     "jest": "^26.6.3",
     "postcss": "^8.2.8",
+    "sass": "^1.35.1",
+    "sass-loader": "^10.1.1",
     "ts-jest": "^26.5.4",
     "vue-jest": "^3.0.4"
   }
