--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,4 +7,6 @@ jobs:
   Build-Image:
     runs-on: ubuntu-latest
     steps:
-      run: docker ps
+      - name: Checking out this repository
+        uses: actions/checkout@v2
+      - run: docker ps
