--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,8 @@ jobs:
   Build-Image:
     runs-on: ubuntu-latest
     env:
-      TAG_COMMIT: chengchaip/logic-frontend:latest
-      TAG_LATEST: chengchaip/logic-frontend:$GITHUB_SHA
+      TAG_LATEST: chengchaip/logic-frontend:latest
+      TAG_COMMIT: "chengchaip/logic-frontend:${GITHUB_SHA}"
     steps:
       - name: Checking out this repository
         uses: actions/checkout@v2
