--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,11 +7,10 @@ jobs:
   Build-Image:
     runs-on: ubuntu-latest
     env:
-      TAG_LATEST: chengchaip/logic-frontend:latest
-      TAG_COMMIT: "chengchaip/logic-frontend:${GITHUB_SHA}"
+      IMAGE_REF: chengchaip/logic-frontend
     steps:
       - name: Checking out this repository
         uses: actions/checkout@v2
       - run: docker ps
-      - run: echo "${TAG_COMMIT}"
-      - run: echo "${TAG_LATEST}"
+      - run: echo "${IMAGE_REF}:latest"
+      - run: echo "${IMAGE_REF}:${GITHUB_SHA}"
