--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,9 +7,14 @@ jobs:
   Build-Image:
     runs-on: ubuntu-latest
     env:
-      IMAGE_REF: chengchaip/logic-frontend
+      IMAGE_REF: logicking/logic-frontend
     steps:
       - name: Checking out this repository
         uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - run: chmod +x ./deploy.sh
       - run: ./deploy.sh "${IMAGE_REF}:${GITHUB_SHA}" "${IMAGE_REF}:latest"
