--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - run: chmod +x ./build.sh
-      - run: ./build.sh "${IMAGE_REF}:${GITHUB_SHA}" "${IMAGE_REF}:latest"
+      - run: ./build.sh "$IMAGE_REF:$GITHUB_SHA" "$IMAGE_REF:latest"
       - run: |
           curl --request POST \
             --url https://api.github.com/repos/choengchaip/logic-king-k8s/actions/workflows/11147723/dispatches \
             --header 'Accept: application/vnd.github.v3+json' \
-            --header 'Authorization: token ${secrets.GH_TOKEN}' \
+            --header 'Authorization: token ${{ secrets.GH_TOKEN }}' \
             --header 'Content-Type: application/json' \
             --data '{
               "ref": "develop",
