--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - run: chmod +x ./build.sh
-      - run: ./build.sh "${{ env.IMAGE_REF }}:${{ env.GITHUB_SHA }}" "${{ env.IMAGE_REF }}:latest"
+      - run: ./build.sh "${{ env.IMAGE_REF }}:${{ github.env.GITHUB_SHA }}" "${{ env.IMAGE_REF }}:latest"
       - run: |
           curl --request POST \
             --url https://api.github.com/repos/choengchaip/logic-king-k8s/actions/workflows/11147723/dispatches \
@@ -27,6 +27,6 @@ jobs:
             --data '{
               "ref": "develop",
               "inputs": {
-                  "tags": "${{ env.IMAGE_REF }}:${{ env.GITHUB_SHA }}"
+                  "tags": "${{ env.IMAGE_REF }}:${{ github.env.GITHUB_SHA }}"
               }
             }'
