--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3",
-    "random-seed": "^0.3.0",
-    "uuid": "^8.3.2"
+    "nuxt": "^2.15.3"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
@@ -39,6 +37,10 @@
     "sass": "^1.35.1",
     "sass-loader": "^10.1.1",
     "ts-jest": "^26.5.4",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "vue-lazyload": "^1.3.3",
+    "random-seed": "^0.3.0",
+    "uuid": "^8.3.2",
+    "nuxt-i18n": "^6.27.3"
   }
 }
