--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-rc.13",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
@@ -33,14 +34,14 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.7.0",
     "jest": "^26.6.3",
+    "nuxt-i18n": "^6.27.3",
     "postcss": "^8.2.8",
+    "random-seed": "^0.3.0",
     "sass": "^1.35.1",
     "sass-loader": "^10.1.1",
     "ts-jest": "^26.5.4",
-    "vue-jest": "^3.0.4",
-    "vue-lazyload": "^1.3.3",
-    "random-seed": "^0.3.0",
     "uuid": "^8.3.2",
-    "nuxt-i18n": "^6.27.3"
+    "vue-jest": "^3.0.4",
+    "vue-lazyload": "^1.3.3"
   }
 }
